src/snapshots/resume_tui__markdown__test__convert_markdown_bock_quote.snap
---
source: src/markdown.rs
expression: term.backend()
---
"| super important block quote                "
"                                             "
