src/snapshots/resume_tui__markdown__test__convert_markdown_breaks.snap
---
source: src/markdown.rs
expression: term.backend()
---
"one soft                                     "
"                                             "
"hard                                         "
"                                             "
"double hard                                  "
"                                             "
