src/snapshots/resume_tui__markdown__test__convert_markdown_one_line.snap
---
source: src/markdown.rs
expression: term.backend()
---
"just text                                    "
"                                             "
